# ProgTech

hudilajnen.vlaislav/A1/: CMakeLists.txt  base-types.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
hudilajnen.vlaislav/A2/: main.cpp  test-main.cpp
hudilajnen.vlaislav/A3/: main.cpp  test-main.cpp
hudilajnen.vlaislav/A4/: main.cpp  test-main.cpp
hudilajnen.vlaislav/B1/: data.txt  details.cpp  details.hpp  fill-random.cpp  main.cpp  print.hpp  sort.hpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  tasks.hpp
hudilajnen.vlaislav/B2/: main.cpp  queue.hpp  task1.cpp  task2.cpp  tasks.hpp
hudilajnen.vlaislav/B3/: commands.cpp  commands.hpp  container.cpp  container.hpp  interface.cpp  interface.hpp  main.cpp  phone-book.cpp  phone-book.hpp  task1.cpp  task2.cpp  tasks.hpp
hudilajnen.vlaislav/B4/: data-struct.cpp  data-struct.hpp  guard.cpp  guard.hpp  main.cpp  task.cpp  task.hpp
hudilajnen.vlaislav/common/: base-types.cpp  base-types.hpp  circle.cpp  circle.hpp  composite-shape.cpp  composite-shape.hpp  matrix.cpp  matrix.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  test-circle.cpp  test-composite-shape.cpp  test-matrix.cpp  test-rectangle.cpp
